--- a/NLP/nlp_Parkinson's_Diagnose.ipynb
+++ b/NLP/nlp_Parkinson's_Diagnose.ipynb
@@ -16,7 +16,7 @@
         "id": "styUeZPaHF32"
       },
       "source": [
-        "# NLP"
+        "# NLP - Tests\n"
       ]
     },
     {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -54,7 +54,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mLookupError\u001b[0m                               Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[4], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m nltk\u001b[38;5;241m.\u001b[39mdownload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpunkt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mComputer science is the study of computation, automation, and information. Computer science spans theoretical disciplines (such as algorithms, theory of computation, information theory, and automation) to practical disciplines (including the design and implementation of hardware and software). Computer science is generally considered an academic discipline and distinct from computer programming\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 6\u001b[0m tokens \u001b[38;5;241m=\u001b[39m \u001b[43mword_tokenize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n",
+            "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m nltk\u001b[38;5;241m.\u001b[39mdownload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpunkt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mComputer science is the study of computation, automation, and information. Computer science spans theoretical disciplines (such as algorithms, theory of computation, information theory, and automation) to practical disciplines (including the design and implementation of hardware and software). Computer science is generally considered an academic discipline and distinct from computer programming\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 6\u001b[0m tokens \u001b[38;5;241m=\u001b[39m \u001b[43mword_tokenize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n",
             "File \u001b[0;32m~/Documents/GitHub/Parkinson-Prediagnosis/venv/lib/python3.10/site-packages/nltk/tokenize/__init__.py:142\u001b[0m, in \u001b[0;36mword_tokenize\u001b[0;34m(text, language, preserve_line)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mword_tokenize\u001b[39m(text, language\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menglish\u001b[39m\u001b[38;5;124m\"\u001b[39m, preserve_line\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m    128\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    129\u001b[0m \u001b[38;5;124;03m    Return a tokenized copy of *text*,\u001b[39;00m\n\u001b[1;32m    130\u001b[0m \u001b[38;5;124;03m    using NLTK's recommended word tokenizer\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    140\u001b[0m \u001b[38;5;124;03m    :type preserve_line: bool\u001b[39;00m\n\u001b[1;32m    141\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 142\u001b[0m     sentences \u001b[38;5;241m=\u001b[39m [text] \u001b[38;5;28;01mif\u001b[39;00m preserve_line \u001b[38;5;28;01melse\u001b[39;00m \u001b[43msent_tokenize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlanguage\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    143\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [\n\u001b[1;32m    144\u001b[0m         token \u001b[38;5;28;01mfor\u001b[39;00m sent \u001b[38;5;129;01min\u001b[39;00m sentences \u001b[38;5;28;01mfor\u001b[39;00m token \u001b[38;5;129;01min\u001b[39;00m _treebank_word_tokenizer\u001b[38;5;241m.\u001b[39mtokenize(sent)\n\u001b[1;32m    145\u001b[0m     ]\n",
             "File \u001b[0;32m~/Documents/GitHub/Parkinson-Prediagnosis/venv/lib/python3.10/site-packages/nltk/tokenize/__init__.py:119\u001b[0m, in \u001b[0;36msent_tokenize\u001b[0;34m(text, language)\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msent_tokenize\u001b[39m(text, language\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menglish\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    110\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    111\u001b[0m \u001b[38;5;124;03m    Return a sentence-tokenized copy of *text*,\u001b[39;00m\n\u001b[1;32m    112\u001b[0m \u001b[38;5;124;03m    using NLTK's recommended sentence tokenizer\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[38;5;124;03m    :param language: the model name in the Punkt corpus\u001b[39;00m\n\u001b[1;32m    118\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 119\u001b[0m     tokenizer \u001b[38;5;241m=\u001b[39m \u001b[43m_get_punkt_tokenizer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlanguage\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m tokenizer\u001b[38;5;241m.\u001b[39mtokenize(text)\n",
             "File \u001b[0;32m~/Documents/GitHub/Parkinson-Prediagnosis/venv/lib/python3.10/site-packages/nltk/tokenize/__init__.py:105\u001b[0m, in \u001b[0;36m_get_punkt_tokenizer\u001b[0;34m(language)\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mlru_cache\n\u001b[1;32m     97\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_get_punkt_tokenizer\u001b[39m(language\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menglish\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m     98\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     99\u001b[0m \u001b[38;5;124;03m    A constructor for the PunktTokenizer that utilizes\u001b[39;00m\n\u001b[1;32m    100\u001b[0m \u001b[38;5;124;03m    a lru cache for performance.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[38;5;124;03m    :type language: str\u001b[39;00m\n\u001b[1;32m    104\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 105\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mPunktTokenizer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlanguage\u001b[49m\u001b[43m)\u001b[49m\n",
@@ -67,16 +67,24 @@
       ],
       "source": [
         "import nltk\n",
-        "from nltk.tokenize import word_tokenize, sent_tokenize\n",
         "nltk.download('punkt')\n",
         "\n",
-        "text = \"Computer science is the study of computation, automation, and information. Computer science spans theoretical disciplines (such as algorithms, theory of computation, information theory, and automation) to practical disciplines (including the design and implementation of hardware and software). Computer science is generally considered an academic discipline and distinct from computer programming\"\n",
-        "tokens = word_tokenize(text)"
+        "from nltk.tokenize import word_tokenize, sent_tokenize\n",
+        "\n",
+        "\n",
+        "text = \"Computer science is the study of computation, automation, and information.\" \n",
+        "\"Computer science spans theoretical disciplines (such as algorithms, theory of computation, information theory, and automation) to practical disciplines (including the design and implementation of hardware and software).\" \n",
+        "\"Computer science is generally considered an academic discipline and distinct from computer programming\"\n",
+        "\n",
+        "tokens = word_tokenize(text)\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -117,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -130,7 +138,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'couldn', 'as', 'themselves', \"mightn't\", 'over', \"it's\", 'down', 'don', 'did', 'where', 'that', \"didn't\", \"you'd\", 'doing', 'from', 'very', 'no', 'when', 'those', 'y', 'his', 'because', 'we', \"you've\", \"shouldn't\", 'or', \"you're\", 'all', 'my', 'is', 'not', 's', \"mustn't\", 'some', 'a', 'mightn', 'been', 'more', 'until', 'during', 'she', 'having', 'than', 'these', 'mustn', 'then', 'll', 'had', \"should've\", 'they', \"that'll\", 'against', 'other', 'through', 'between', 'myself', 'it', 'have', 'any', 'now', 'each', \"weren't\", 'for', \"she's\", 'above', 'should', 'what', 'does', 'hers', 'wouldn', 'if', 'were', 'theirs', 't', 'same', 'at', 'yourselves', 'i', 'shouldn', 'by', 'didn', 'such', 'you', 'your', 'under', 'but', 'just', 'aren', 'm', 've', 'once', 'too', 'will', 'himself', 'below', 'hasn', \"haven't\", 'and', 'our', 'why', \"don't\", \"hadn't\", \"needn't\", 'yours', 'their', 'off', 'haven', 'd', 'them', 'into', 'ain', 'needn', 'yourself', \"doesn't\", \"wasn't\", 'her', 'shan', 'to', 'of', 'the', 'ours', 'isn', 'me', 'o', 'out', \"couldn't\", 'him', 'in', 'ourselves', 'be', 'after', 'has', 'this', 'here', 'itself', 'on', \"shan't\", 'own', \"wouldn't\", 'only', 'both', \"you'll\", 're', 'an', 'am', 'who', 'few', 'with', \"isn't\", 'ma', \"aren't\", 'are', 'herself', 'how', 'most', 'can', 'being', \"won't\", 'wasn', 'won', 'about', 'which', 'hadn', 'do', 'was', 'doesn', 'its', 'he', 'nor', 'so', 'up', 'before', 'further', \"hasn't\", 'whom', 'again', 'there', 'while', 'weren'}\n"
+            "{'through', \"hasn't\", 'other', 'hasn', 'his', 'if', 'me', 'again', 'only', \"she's\", 'm', \"shan't\", 'by', 'most', 'this', 'in', 'themselves', 'was', 'own', 'any', 'll', 'while', \"didn't\", \"weren't\", 'when', 'will', 'that', 'doing', \"you've\", 'herself', 'aren', 'but', 'won', 'my', 'it', 'on', 'do', 'shan', 'i', \"aren't\", 'down', 'ours', 'and', 'after', 'mustn', 'for', 'nor', 'yourself', 'whom', 'are', 'these', 'your', \"don't\", 'does', \"wasn't\", 'having', 'some', 'from', \"wouldn't\", 've', 'what', 'had', 't', 'during', 'too', 'be', 'y', 'you', 'which', 'over', 'she', 'their', 'just', 'there', 'did', 'how', \"that'll\", 'not', 'been', 'don', 's', 'the', 'each', 'her', 'few', 'have', 'they', 'can', 'up', 'at', 'before', 're', 'them', 'or', 'an', 'its', 'am', 'ain', \"mustn't\", 'o', 'now', 'mightn', 'of', 'here', 'our', 'off', 'between', 'with', 'then', 'why', 'him', 'couldn', 'no', 'all', 'very', 'because', 'isn', 'above', \"isn't\", 'doesn', 'wasn', 'theirs', \"hadn't\", 'same', 'weren', 'should', 'both', 'so', 'such', 'wouldn', 'didn', 'against', 'where', 'haven', 'has', 'yourselves', 'more', 'into', 'being', 'further', \"should've\", 'were', \"it's\", 'we', 'those', 'd', 'needn', \"won't\", 'under', 'who', \"mightn't\", 'below', 'once', 'ma', 'yours', 'to', \"doesn't\", 'shouldn', \"couldn't\", 'than', 'out', 'until', \"needn't\", 'about', 'hers', \"you'll\", 'is', 'a', \"you'd\", 'ourselves', 'he', 'as', 'itself', 'myself', \"shouldn't\", \"you're\", 'hadn', 'himself', \"haven't\"}\n"
           ]
         },
         {
@@ -139,7 +147,7 @@
           "text": [
             "[nltk_data] Downloading package stopwords to\n",
             "[nltk_data]     /Users/hanliyang/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ]
         },
         {
@@ -149,7 +157,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[5], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(stop_words)\n\u001b[1;32m      7\u001b[0m filter_words \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtokens\u001b[49m:\n\u001b[1;32m      9\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m t \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m stop_words:\n\u001b[1;32m     10\u001b[0m     filter_words\u001b[38;5;241m.\u001b[39mappend(t)\n",
+            "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(stop_words)\n\u001b[1;32m      7\u001b[0m filter_words \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtokens\u001b[49m:\n\u001b[1;32m      9\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m t \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m stop_words:\n\u001b[1;32m     10\u001b[0m     filter_words\u001b[38;5;241m.\u001b[39mappend(t)\n",
             "\u001b[0;31mNameError\u001b[0m: name 'tokens' is not defined"
           ]
         }
@@ -180,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -223,11 +231,145 @@
         "lemmatize_words([\"cats\", \"cacti\", \"geese\", 'goose'])\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kGDCjCD27110"
+      },
+      "source": [
+        "# Parkinson's Diagnose"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6wQQ03Ow8u6J"
+      },
+      "source": [
+        "## counting pos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FPsS5RBY9RjC",
+        "outputId": "2995c83c-e99a-4c43-aafe-e1e90945d481"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+            "[nltk_data]     /root/nltk_data...\n",
+            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
+          ]
+        }
+      ],
+      "source": [
+        "import nltk\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('averaged_perceptron_tagger')\n",
+        "\n",
+        "from nltk.tag import pos_tag\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "\n",
+        "tokens = \"Computer science is the study of computation, automation, and information.\"\\\n",
+        "\"Computer science spans theoretical disciplines (such as algorithms, theory of computation, information theory, and automation) to practical disciplines (including the design and implementation of hardware and software).\"\\\n",
+        "\"Computer science is generally considered an academic discipline and distinct from computer programming.\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1v58QMikBnZc"
+      },
+      "source": [
+        "* verbs - VB\tverb (ask)\n",
+        "VBG\tverb gerund (judging)\n",
+        "VBD\tverb past tense (pleaded)\n",
+        "VBN\tverb past participle (reunified)\n",
+        "VBP\tverb, present tense not 3rd person singular(wrap)\n",
+        "VBZ\tverb, present tense with 3rd person singular (bases)\n",
+        "* common nouns - NN, NNS\n",
+        "* proper nouns - NNP, NNPS\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "id": "O2VPwr9A-OET"
+      },
+      "outputs": [],
+      "source": [
+        "filler_words = [\n",
+        "    \"um\", \"uh\", \"er\", \"like\", \"you know\", \"i mean\", \"well\", \"so\", \"okay\", \"right\",\n",
+        "    \"actually\", \"basically\", \"literally\", \"kind of\", \"sort of\", \"anyway\", \"or something\",\n",
+        "    \"whatever\", \"i guess\", \"you see\", \"got it\", \"i suppose\", \"just\", \"yeah\", \"yep\",\n",
+        "    \"seriously\", \"alright\", \"hmm\", \"look\", \"totally\", \"alright then\", \"know what i mean?\",\n",
+        "    \"at the end of the day\", \"to be honest\", \"if you know what i mean\"\n",
+        "]\n",
+        "\n",
+        "def pdFeaturesCount(tokens):\n",
+        "  wordList = pos_tag(word_tokenize(tokens))\n",
+        "  totalWords, verbsRate, verbs, commonNouns, properNouns, fillers = 0, 0, 0, 0, 0, 0\n",
+        "  for word, pos in wordList:\n",
+        "    #print(word, pos)\n",
+        "    totalWords += 1\n",
+        "    if pos in ['VB', 'VBG', 'VBD', 'VBN', 'VBP', 'VBZ']:\n",
+        "      verbs += 1\n",
+        "    if pos in ['NN', 'NNS']:\n",
+        "      commonNouns += 1\n",
+        "    if pos in ['NNP', 'NNPS']:\n",
+        "      properNouns += 1\n",
+        "    if word in filler_words:\n",
+        "      fillers += 1\n",
+        "  verbsRate = verbs / totalWords\n",
+        "  return totalWords, verbsRate, verbs, commonNouns, properNouns, fillers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SYThN75NAFt4",
+        "outputId": "363b1c18-bb7a-4b46-dee3-7de5b1e6fa3a"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(59, 0.06779661016949153, 4, 25, 1, 0)"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "pdFeaturesCount(tokens)"
+      ]
     }
   ],
   "metadata": {
     "colab": {
-      "authorship_tag": "ABX9TyM27EN+g2G4bE1qcyToRDSF",
+      "authorship_tag": "ABX9TyNORmJtNOZTaXoell/LOQTl",
+      "collapsed_sections": [
+        "PKCczpbOHOwl",
+        "KLMyAp4wKGC0"
+      ],
       "include_colab_link": true,
       "provenance": [],
       "toc_visible": true
